--- a/ES6/index2.html
+++ b/ES6/index2.html
@@ -5,8 +5,6 @@
         <title>Document</title>
     </head>
     <body>
-        <button id="novotodo">Adicionar</button>
-
-        <script src="bundle.js"></script>
+        <script src="bundle2.js"></script>
     </body>
 </html>
