--- a/ES6/async_await/indexAsyncAwait.html
+++ b/ES6/async_await/indexAsyncAwait.html
@@ -5,6 +5,6 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="bundle.js"></script>
+        <script src="bundle_async_await.js"></script>
     </body>
 </html>
